<resources>
    <string name="app_name">Flight_Track</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_3">RealTime </string>
    <string name="tab_2">Airports </string>
    <string name="tab_1">Airlines </string>

    <string name="tab_label1">Airlines</string>
    <string name="tab_label2">Airports</string>
    <string name="tab_label3">Real-Time</string>
    <string name="airline_name">Airline Name</string>
    <string name="icao">ICAO</string>
    <string name="iata">IATA</string>
    <string name="location_name">Location Name</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="c_code">C_code</string>
    <string name="title">Title</string>
    <string name="textview">TextView</string>
    <string name="departure_airport">Departure Airport:</string>
    <string name="scheduled_time">Scheduled Time</string>
    <string name="airport_name">Airport Name</string>

    <string name="code">Code:</string>
    <string name="search">Search</string>
    <string name="alerts">Alerts</string>
    <string name="logout">Logout</string>

    <string name="username">User Name:</string>
    <string name="enter_here">Enter here</string>

    <string name="todo">TODO</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password:</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">login</string>
    <string name="login_Logo">LoginPageLogo</string>
    <string name="already_a_user">Already a user?</string>
    <string name="last_name">Last Name:</string>
    <string name="g_mail">G-mail:</string>
    <string name="gmail">Gmail</string>
    <string name="last_name1">Last Name</string>
    <string name="new_user">new user ?</string>
</resources>