<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:textAlignment="center"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/Airport_Name"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:text="@string/airport_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="379dp"
            android:layout_height="161dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/todo" />


        <TextView
            android:id="@+id/Code"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="379dp"
            android:layout_height="30dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="19sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>