<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Airport_Recycler">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/Airport_Name"
            app:layout_constraintTop_toBottomOf="@+id/Airport_Name">

            <com.google.android.material.imageview.ShapeableImageView

                android:id="@+id/ImageView"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginStart="4dp"

                android:backgroundTint="#805353"
                android:backgroundTintMode="add"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/Airport_Name"
                android:layout_width="215dp"
                android:layout_height="54dp"
                android:gravity="center"
                android:text="@string/airport_name"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txt_Latitude"
                android:layout_width="122dp"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/latitude"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/txt_Longitude"
                android:layout_width="122dp"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/longitude"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.613"
                app:layout_constraintStart_toEndOf="@+id/ImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/txt_Country_Code"
                android:layout_width="69dp"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/c_code"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.976"
                app:layout_constraintStart_toEndOf="@+id/ImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/Airport_ICAO"
                android:layout_width="102dp"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/icao"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.972"
                app:layout_constraintStart_toEndOf="@+id/ImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.042" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>