<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".airline_Recycler">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/Airport_Name"
            app:layout_constraintTop_toBottomOf="@+id/Airport_Name">

            <com.google.android.material.imageview.ShapeableImageView

                android:id="@+id/ImageView"
                android:layout_width="81dp"
                android:layout_height="100dp"
                android:layout_marginStart="4dp"

                android:layout_marginEnd="144dp"
                android:backgroundTint="#805353"
                android:backgroundTintMode="add"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toStartOf="@+id/txt_IATA2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/Airport_Name"
                android:layout_width="315dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="@string/airline_name"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txt_ICAO"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="256dp"
                android:layout_marginBottom="14dp"
                android:text="@string/icao"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ImageView"
                app:layout_constraintTop_toBottomOf="@+id/Airport_Name" />

            <TextView
                android:id="@+id/txt_IATA"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:layout_marginEnd="180dp"
                android:layout_marginBottom="12dp"
                android:text="@string/iata"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_ICAO"
                app:layout_constraintTop_toBottomOf="@+id/Airport_Name"
                app:layout_constraintVertical_bias="0.23000002" />

            <TextView
                android:id="@+id/txt_IATA2"
                android:layout_width="163dp"
                android:layout_height="0dp"
                android:layout_marginBottom="12dp"
                android:text="@string/location_name"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_IATA"
                app:layout_constraintTop_toBottomOf="@+id/Airport_Name" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>